--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
         <div class="form-box active" id="login-form">
-            <form action="">
+            <form action="website_login.php" method="post">
                 <h2>Login</h2>
                 <input type="email" name="email" placeholder="Email" required>
                 <input type="password" name="password" placeholder="Password" required>
@@ -19,7 +20,7 @@
         </div>
 
         <div class="form-box" id="register-form">
-            <form action="">
+            <form action="website_login.php" method="post">
                 <h2>Register</h2>
                 <input type="text" name="name" placeholder="Name" required>
                 <input type="email" name="email" placeholder="Email" required>
